[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/FightScene.gd" type="Script" id=1]
[ext_resource path="res://Images/Background/2.png" type="Texture" id=2]
[ext_resource path="res://font.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 415 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 720, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 415 )

[node name="FightScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 720, 415 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=[
"Wall",
]]

[node name="Left" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 415 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="." groups=[
"Wall",
]]

[node name="Floor" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 720, 830 )
shape = SubResource( 2 )

[node name="StaticBody2D3" type="StaticBody2D" parent="." groups=[
"Wall",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 1440, 415 )
shape = SubResource( 3 )

[node name="p1" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 150.0
color = Color( 0, 0, 0.784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="p1"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 0.097821, 0.097821 )
custom_fonts/font = ExtResource( 3 )
text = "Player 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="consciousness" type="Label" parent="p1"]
margin_left = 16.0
margin_top = 72.0
margin_right = 3406.0
margin_bottom = 631.0
rect_scale = Vector2( 0.0537856, 0.0537856 )
custom_fonts/font = ExtResource( 3 )
text = "Consciousness"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bkgrnd" type="ColorRect" parent="p1"]
margin_left = 20.0
margin_top = 110.0
margin_right = 700.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar" type="ColorRect" parent="p1"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[node name="attack" type="Label" parent="p1"]
margin_left = 315.0
margin_top = 16.915
margin_right = 3705.0
margin_bottom = 575.915
rect_scale = Vector2( 0.0537856, 0.0537856 )
custom_fonts/font = ExtResource( 3 )
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bkgrnd2" type="ColorRect" parent="p1"]
margin_left = 400.0
margin_top = 25.0
margin_right = 700.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar2" type="ColorRect" parent="p1"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[node name="shoot" type="Label" parent="p1"]
margin_left = 315.0
margin_top = 59.759
margin_right = 3705.0
margin_bottom = 618.759
rect_scale = Vector2( 0.0537856, 0.0537856 )
custom_fonts/font = ExtResource( 3 )
text = "Shoot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bkgrnd3" type="ColorRect" parent="p1"]
margin_left = 400.0
margin_top = 70.0
margin_right = 700.0
margin_bottom = 85.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar3" type="ColorRect" parent="p1"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[node name="p2" type="ColorRect" parent="."]
margin_left = 720.0
margin_right = 1440.0
margin_bottom = 150.0
color = Color( 0.784314, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="p2"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 0.097821, 0.097821 )
custom_fonts/font = ExtResource( 3 )
text = "Player 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="consciousness" type="Label" parent="p2"]
margin_left = 16.0
margin_top = 72.0
margin_right = 3406.0
margin_bottom = 631.0
rect_scale = Vector2( 0.0537856, 0.0537856 )
custom_fonts/font = ExtResource( 3 )
text = "Consciousness"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bkgrnd" type="ColorRect" parent="p2"]
margin_left = 20.0
margin_top = 110.0
margin_right = 700.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar" type="ColorRect" parent="p2"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[node name="attack" type="Label" parent="p2"]
margin_left = 315.0
margin_top = 16.915
margin_right = 3705.0
margin_bottom = 575.915
rect_scale = Vector2( 0.0537856, 0.0537856 )
custom_fonts/font = ExtResource( 3 )
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bkgrnd2" type="ColorRect" parent="p2"]
margin_left = 400.0
margin_top = 25.0
margin_right = 700.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar2" type="ColorRect" parent="p2"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[node name="shoot" type="Label" parent="p2"]
margin_left = 315.0
margin_top = 59.759
margin_right = 3705.0
margin_bottom = 618.759
rect_scale = Vector2( 0.0537856, 0.0537856 )
custom_fonts/font = ExtResource( 3 )
text = "Shoot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bkgrnd3" type="ColorRect" parent="p2"]
margin_left = 400.0
margin_top = 70.0
margin_right = 700.0
margin_bottom = 85.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar3" type="ColorRect" parent="p2"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[node name="Show" type="ColorRect" parent="."]
margin_left = 620.0
margin_top = 150.0
margin_right = 820.0
margin_bottom = 250.0
color = Color( 0.784314, 0, 0.784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Show"]
margin_left = 10.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 90.0
color = Color( 0, 0, 0, 1 )

[node name="ShowTime" type="Label" parent="Show/ColorRect"]
margin_left = -11.0
margin_top = -10.0
margin_right = 3547.0
margin_bottom = 1758.0
rect_scale = Vector2( 0.0563583, 0.0563583 )
custom_fonts/font = ExtResource( 3 )
text = "Time Left:
30s"
align = 1
valign = 1
